# TraceR

./: BuildWin.bat  CMakeLists.txt  README.md  thisshitweird.bat
SandboxApp/: CMakeLists.txt
SandboxApp/src/: main.cpp
TraceREngine/: CMakeLists.txt
TraceREngine/src/: Core.h  TraceREngine.h  pch.h
TraceREngine/src/Core/: Application.cpp  Application.h  IWindow.h  RendererTypes.h
TraceREngine/src/HardwareRT/: Hitable.h  RTWorld.h  Ray.h  RayTracer.cpp  RayTracer.h
TraceREngine/src/OpenGL/: OpenGLWindow.cpp  OpenGLWindow.h
TraceREngine/src/SoftwareRT/: Hitable.h  RTCamera.cpp  RTCamera.h  RTWorld.h  RayTracer.cpp  RayTracer.h
TraceREngine/src/Utils/: Intervals.cpp  Intervals.h  constants.h  helpers.h  vec3.h
